# scatterbrane

./: .gitignore  LICENSE  README.rst  index.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
0.0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.0.1/_sources/user/: ensemble_average.txt  examples.txt  install.txt  introduction.txt  ss.txt  time_variability.txt
0.0.1/user/: brane.html  cp_errors.html  ensemble_average.html  examples.html  install.html  introduction.html  ss.html  time_variability.html  tracks.html  utilities.html
docs/: Makefile  conf.py  index.rst
docs/_code/: cp_errors.py  ensemble_average.py  time_variability.py
docs/user/: brane.rst  cp_errors.rst  time_variability.rst  tracks.rst  utilities.rst
examples/: closure_phase_errors.py
scatterbrane/: .gitignore  __init__.py  brane.py  tracks.py  utilities.py
